tests/dependent/should_compile/T18660.hs
{-# LANGUAGE PolyKinds #-}
{-# LANGUAGE RankNTypes #-}
{-# LANGUAGE StandaloneKindSignatures #-}
module T18660 where

type F :: forall a -> b -> b
type F x y = y
