tests/dependent/should_fail/T16326_Fail3.hs
{-# LANGUAGE PatternSynonyms #-}
{-# LANGUAGE PolyKinds #-}
{-# LANGUAGE RankNTypes #-}
module T16326_Fail3 where

pattern Nil :: forall a -> [a]
pattern Nil <- undefined
